Remove separate Splash page

--- a/Components/Pages/Index.razor
+++ b/Components/Pages/Index.razor
@@ -4,6 +4,6 @@
 @code {
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo("/splash", true);
+        Navigation.NavigateTo("/sd-card-prep", true);
     }
 }
