Add docs link to Setup Complete page

--- a/Components/Pages/SetupComplete.razor
+++ b/Components/Pages/SetupComplete.razor
@@ -54,6 +54,13 @@
                     <strong>Enjoy your games!</strong>
                 </p>
             </div>
+
+            <div class="docs-section">
+                <p class="docs-message">
+                    For more information on further customizing NextUI, please refer to the 
+                    <a href="https://nextui.loveretro.games/docs/" target="_blank" class="docs-link">official docs</a>.
+                </p>
+            </div>
         </div>
 
         <div class="completion-actions">
@@ -144,6 +151,28 @@
         font-size: 1.3em;
         color: #28a745;
         margin: 0;
+    }
+
+    .docs-section {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .docs-message {
+        font-size: 1em;
+        color: #495057;
+        margin: 0;
+        line-height: 1.5;
+    }
+
+    .docs-link {
+        color: #0366d6;
+        text-decoration: none;
+        font-weight: 500;
+    }
+
+    .docs-link:hover {
+        text-decoration: underline;
     }
 
     .instructions-section {
